--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fcm-node": "^1.6.1",
+    "firebase-admin": "^10.0.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
