--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fcm-node": "^1.6.1",
+    "firebase": "^9.6.1",
     "firebase-admin": "^10.0.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
